CHANGES IN VERSION 1.12.0
-------------------------

NEW FEATURES

    o New function, calc_complexity(): [in progress]

    o New function, calc_gc(): [in progress]

MINOR CHANGES

    o Slight performance gains in get_bkg() window code. [in progress]

CHANGES IN VERSION 1.10.1
-------------------------

BUG FIXES

    o Restore temporarily disabled ggtree(layout="daylight") example in the
      MotifComparisonAndPvalues.Rmd vignette, as tidytree is now patched.

    o Fixed some awkwardness in view_motifs() panel spacing and title
      justification.

CHANGES IN VERSION 1.10.0
-------------------------

NEW FEATURES

    o A new data structure, universalmotif_df, has been made available. This
      allows for motifs to be manipulated as one would a data.frame object.
      The to_df() function is used to generate this stucture from lists of
      motifs. The update_motifs() function is used to apply changes to the
      actual motifs, and to_list() returns the actual motifs. Note that this is
      only meant as an option for more conveniently manipulating motif slots of
      multiple motifs simultaneously before returning them to a list; the
      universalmotif_df structure cannot be used in the various universalmotif
      functions. Additionally, requires_update() can be used to ascertain
      whether motifs are out of date in a universalmotif_df object. Many thanks
      to @snystrom for discussions and significant contributions.

    o view_motifs(): the universalmotif package now relies entirely on its
      own code to generate the polygon data used by ggplot2 to plot motifs,
      meaning the ggseqlogo import has been dropped. A number of new options
      are now available, including plotting multifreq logos and finer control
      over letter spacing. An effort has been made to ensure that the default
      behaviour of the function be unchanged from previous versions. This
      change should also allow for easier fixing of bugs and flexibility for